# sqlite-mpi-rust

./: Cargo.toml  LICENSE  readme.md  todo.md
runtime/: Cargo.toml
runtime/src/: active_txs.rs  json_in.rs  json_out.rs  json_spec.md  lib.rs  messages.json  messages.rs  runtime.rs  simulator.rs  test_json.rs  test_json_out.rs  test_runtime.rs  utils.rs
runtime/src/test_envs/: a.rs
sh/: cb.sh  ct-ffi-minimal-valgrind.sh  ct-ffi-minimal.sh  ct-io-ffi.sh  ct-package-docs.sh  ct-package-tx.sh  ct-package.sh  ct-runtime-json-out.sh  ct-runtime.sh  ct-sma.sh
sh/dtrace/: readme.md
sh/dtrace/d/: set-ffi-boundary.js  sqlite-ffi-sql.c  sqlite-ffi.sh
sh/dtrace/d/del/: sqlite-ffi-2.sh
sh/dtrace/d/del/apsw/: open.py
sh/valgrind/: vg1.sh  vg2.sh
sma/: Cargo.toml
sma/src/: fns.rs  lib.rs  test.rs
smpi_iop_ffi/: Cargo.toml  questions.md  readme.md
smpi_iop_ffi/diagrams/chg/: CHG.txt  readme.md
smpi_iop_ffi/sh/: android-build-and-cp.sh  android-build.sh  android-cp-jni-libs-dev.sh  android-dev-setup.sh  build-ios.sh  node-build-cp.sh
smpi_iop_ffi/src/: ffi.rs  jni.rs  lib.rs  test.rs
sqlite3ffi/: Cargo.toml  build.rs
sqlite3ffi/c-code/sqlite3/3280000/: amalgamation-sha1.txt
sqlite3ffi/sh/: dl-sqlite3-source.sh
sqlite3ffi/src/: cffi.rs  config.rs  db.rs  err.rs  errmap.rs  fns.rs  lib.rs  placeholder.rs  stmt.rs  test_placeholders.rs  test_transactions.rs
