[package]
name = "runtime"
version = "0.1.0"
authors = ["Enzo <emadda.dev@gmail.com>"]
license = "MIT"
edition = "2018"
publish = false


[dependencies]
regex = "1"
uuid = { version = "0.7", features = ["v4"] }
chrono = "0.4"
lazy_static = "1.4.0"
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0"
sma = { path = "../sma" }
sqlite3ffi = { path = "../sqlite3ffi" }
