[package]
name = "sma"
version = "0.1.0"
authors = ["Enzo <emadda.dev@gmail.com>"]
license = "MIT"
edition = "2018"
publish = false

[dependencies]
chrono = "0.4"
uuid = { version = "0.7", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite3ffi = { path = "../sqlite3ffi" }