[package]
name = "smpi_iop_ffi"
version = "0.1.0"
authors = ["Enzo <emadda.dev@gmail.com>"]
license = "MIT"
edition = "2018"
publish = false

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
jni = { version = "0.14.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
runtime = { path = "./../runtime" }

[dev-dependencies]
chrono = "0.4"
uuid = { version = "0.7", features = ["v4"] }
