[package]
name = "sqlite3ffi"
version = "0.1.0"
authors = ["Enzo <emadda.dev@gmail.com>"]
license = "MIT"
edition = "2018"
publish = false

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
bindgen = "0.51.1"
cc = { version = "1.0", features = ["parallel"] }
